Prevent Github ribbon from overlapping the sign-in button
- Done making the ribbon a bit smaller to keep ribbon visible on the
existing media breakpoints
- Bonus: open link in new tab/window

--- a/app/assets/stylesheets/partials/_github-ribbon.sass
+++ b/app/assets/stylesheets/partials/_github-ribbon.sass
@@ -37,7 +37,7 @@
   position: absolute
   display: block
   width: 15.38em
-  height: 2.2em
+  height: 1.8em
 
   top: 2.70em
   right: -3.76em
@@ -74,7 +74,7 @@
   // Set the text properties
   color: white
   font: 700 1em "Helvetica Neue", Helvetica, Arial, sans-serif
-  line-height: 2.2em
+  line-height: 1.8em
   text-decoration: none
   text-align: center
   text-indent: 0
